--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -10,6 +10,21 @@ main:
     weight: 4
 
 footer:
-  - name: "Home"
-    url: "/"
+  - name: "Security"
+    url: "/security/"
     weight: 1
+  - name: "Careers"
+    url: "/careets/"
+    weight: 3
+  - name: "Our Story"
+    url: "/our-story/"
+    weight: 6
+  - name: "Privacy Policy"
+    url: "/privacy-policy/"
+    weight: 2
+  - name: "Clinical Trial Recruitment"
+    url: "/clinical-trial-recruitment/"
+    weight: 5
+  - name: "Rumbo API"
+    url: "/rumbo-api/"
+    weight: 4
