Adds new assets and type

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: 'Volver Health'
 url: "https://volver.health"
 
 logo:
-  mobile: "images/logo/logo-full.png"
-  desktop: "images/logo/logo-full.png"
+  mobile: "images/logo/logo-new.png"
+  desktop: "images/logo/logo-new.png"
 
 
 home: 
