Fixes workflow yaml

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,14 +4,10 @@ on: push
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    steps:
-
-    # Put steps here to build your site, deploy it to a service, etc.
-
-    - name: Purge cache
-      uses: jakejarvis/cloudflare-purge-action@master
-      secrets:
-        # Zone is required by both authentication methods
-        CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-        CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
-        CLOUDFLARE_KEY: ${{ secrets.CLOUDFLARE_KEY }}
+    name: Purge cache
+    uses: jakejarvis/cloudflare-purge-action@master
+    secrets:
+      # Zone is required by both authentication methods
+      CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+      CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+      CLOUDFLARE_KEY: ${{ secrets.CLOUDFLARE_KEY }}
