--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,13 +1,16 @@
 main:
+  - name: "Rumbo"
+    url: "/rumbo/"
+    weight: 2
   - name: "Research"
     url: "/research/"
-    weight: 2
+    weight: 3
   - name: "Team"
     url: "/team/"
-    weight: 3
+    weight: 4
   - name: "About"
     url: "/about/"
-    weight: 4
+    weight: 5
 
 footer:
   - name: "Security"
