--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -11,6 +11,9 @@ main:
   - name: "About"
     url: "/about/"
     weight: 5
+  - name: "Partners"
+    url: "/partners/"
+    weight: 6
 
 footer:
   - name: "Security"
